--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
+
+.fill-remaining-space{
+  flex: 1 1 auto;
+}
+
+.form-container > *{
+  width: 100%;
+}
+
+.button-row button{
+  margin-right: 10px;
+}
