--- a/src/app/employees/employee-list/employee-list.component.html
+++ b/src/app/employees/employee-list/employee-list.component.html
@@ -31,7 +31,7 @@
       <mat-header-cell *matHeaderCellDef mat-sort-header></mat-header-cell>
       <mat-cell *matCellDef="let row">
         <button mat-icon-button (click)="onEdit(row)"><mat-icon>launch</mat-icon></button>
-        <button mat-icon-button><mat-icon color="warn">delete_outline</mat-icon></button>
+        <button mat-icon-button (click)="onDelete(row.id)"><mat-icon color="warn">delete_outline</mat-icon></button>
       </mat-cell>
     </ng-container>
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
