--- a/src/app/employees/employee/employee.component.html
+++ b/src/app/employees/employee/employee.component.html
@@ -1,3 +1,8 @@
+<mat-toolbar>
+  <span>{{employeeService.form.controls['id'].value?"Update Employee" : "Add new Employee"}}</span>
+  <span class="fill-remaining-space"></span>
+  <button class="btn-dialog-close" mat-icon-button (click)="onClose()" tabindex="-1"><mat-icon>close</mat-icon></button>
+</mat-toolbar>
 <form [formGroup]=employeeService.form (submit)="onSubmit()">
   <mat-grid-list cols="1" rowHeight="500px">
     <mat-grid-tile>
