--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
 
+html, body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+}
+
+
 .fill-remaining-space{
   flex: 1 1 auto;
 }
@@ -17,3 +26,4 @@
   margin-left: 10px;
   width: 300px;
 }
+
